feat: 심화요구사항-프론트엔드와 통합