@@ -4,172 +4,72 @@ import com.sprint.mission.discodeit.dto.data.ChannelDto;
 import com.sprint.mission.discodeit.dto.request.PrivateChannelCreateRequest;
 import com.sprint.mission.discodeit.dto.request.PublicChannelCreateRequest;
 import com.sprint.mission.discodeit.dto.request.PublicChannelUpdateRequest;
-import com.sprint.mission.discodeit.entity.*;
+import com.sprint.mission.discodeit.entity.Channel;
+import com.sprint.mission.discodeit.entity.ChannelType;
+import com.sprint.mission.discodeit.entity.Message;
+import com.sprint.mission.discodeit.entity.ReadStatus;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
 import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
-import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.service.ChannelService;
 import java.time.Instant;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-
-import java.time.LocalDateTime;
-import java.time.ZoneId;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
 
 @Service
 @RequiredArgsConstructor
 public class BasicChannelService implements ChannelService {
 
   private final ChannelRepository channelRepository;
-  private final UserRepository userRepository;
   private final MessageRepository messageRepository;
   private final ReadStatusRepository readStatusRepository;
 
   @Override
   public Channel create(PublicChannelCreateRequest request) {
-    String name = request.channelName();
+    String name = request.name();
     String description = request.description();
-   /* User ownerUser = userRepository.findById(request.ownerUserId())
-        .orElseThrow(() -> new IllegalArgumentException("유효한 사용자 ID가 아닙니다."));
 
-    boolean isDuplicate = channelRepository.findAll().stream()
-        .anyMatch(c -> c.getChannelOwner().getId().equals(ownerUser.getId())
-            && c.getChannelName().equals(request.channelName()));
-
-    if (isDuplicate) {
-      throw new IllegalArgumentException("이미 같은 이름의 채널이 존재합니다.");
-    }
-
-    List<User> members = new ArrayList<>();
-    members.add(ownerUser);
-
-    Channel channel = new Channel(name, description, ownerUser, members, ChannelType.PUBLIC);*/
-    Channel channel = new Channel(name, description, ChannelType.PUBLIC);
+    Channel channel = new Channel(ChannelType.PUBLIC, name, description);
     return channelRepository.save(channel);
   }
 
   @Override
   public Channel create(PrivateChannelCreateRequest request) {
-  /*  User ownerUser = userRepository.findById(request.ownerUserId())
-        .orElseThrow(() -> new IllegalArgumentException("유효한 사용자 ID가 아닙니다."));
-
-    // 채널 이름 중복 확인
-    boolean isDuplicate = channelRepository.findAll().stream()
-        .anyMatch(c -> c.getChannelOwner().getId().equals(ownerUser.getId())
-            && c.getChannelName().equals(request.channelName()));
-
-    if (isDuplicate) {
-      throw new IllegalArgumentException("이미 같은 이름의 채널이 존재합니다.");
-    }
-
-    // 채널 생성 시 참여자와 ReadStatus 처리
-    List<User> members = new ArrayList<>();
-    members.add(ownerUser);*/
-
-    Channel channel = new Channel(null, null, ChannelType.PRIVATE);
-    // ReadStatus 생성 (참여자들에 대해 ReadStatus 설정)
-   /* for (UUID userId : request.memberIds()) {
-      User member = userRepository.findById(userId)
-          .orElseThrow(() -> new IllegalArgumentException("유효한 사용자 ID가 아닙니다."));
-      members.add(member);
-      // ReadStatus 생성 로직 추가
-      ReadStatus readStatus = new ReadStatus(member.getId(), channel.getId());
-      readStatusRepository.save(readStatus);
-    }
-
-    return channelRepository.save(channel);*/
+    Channel channel = new Channel(ChannelType.PRIVATE, null, null);
     Channel createdChannel = channelRepository.save(channel);
 
     request.participantIds().stream()
-        .map(userId -> new ReadStatus(userId, createdChannel.getId(), Instant.MIN))
+        .map(userId -> new ReadStatus(userId, createdChannel.getId(), channel.getCreatedAt()))
         .forEach(readStatusRepository::save);
 
     return createdChannel;
   }
 
-
   @Override
   public Optional<ChannelDto> find(UUID channelId) {
-    Channel channel = channelRepository.findById(channelId)
-        .orElseThrow(() -> new IllegalArgumentException("채널이 존재하지 않습니다."));
-
-    // 가장 최근 메시지 시간 조회
-    List<Message> messages = messageRepository.findByChannelId(channelId);
-
-    LocalDateTime lastMessageTime = messages.stream()
-        .map(Message::getCreatedAt)
-        .map(i -> LocalDateTime.ofInstant(i, ZoneId.systemDefault()))
-        .max(LocalDateTime::compareTo)
-        .orElse(null);
-
-    // PRIVATE 채널이면 멤버 ID 리스트 포함
-    List<UUID> memberIds = null;
-    if (channel.getChannelType() == ChannelType.PRIVATE) {
-      memberIds = channel.getChannelMembers().stream()
-          .map(User::getId)
-          .collect(Collectors.toList());
-    }
-
-    ChannelDto channelDto = new ChannelDto(
-        channel.getId(),
-        channel.getChannelName(),
-        channel.getChannelOwner().getId(),
-        channel.getChannelType(),
-        memberIds,
-        lastMessageTime
-    );
-
-    return Optional.of(channelDto);
+    return channelRepository.findById(channelId)
+        .map(this::toDto);
   }
+
 
   @Override
   public List<ChannelDto> findAllByUserId(UUID userId) {
-    // 1. PUBLIC 채널은 전체 조회
-    // 2. PRIVATE 채널은 userId가 참여한 채널만 조회
-    List<Channel> channels = channelRepository.findAll();
+    List<UUID> mySubscribedChannelIds = readStatusRepository.findAllByUserId(userId).stream()
+        .map(ReadStatus::getChannelId)
+        .toList();
 
-    return channels.stream()
-        .filter(channel -> {
-          if (channel.getChannelType() == ChannelType.PUBLIC) {
-            return true; // PUBLIC 채널은 모두 조회
-          } else if (channel.getChannelType() == ChannelType.PRIVATE) {
-            // PRIVATE 채널인 경우 userId가 참여한 채널만 조회
-            return channel.getChannelMembers().stream()
-                .anyMatch(member -> member.getId().equals(userId));
-          }
-          return false;
-        })
-        .map(channel -> {
-          List<Message> messages = messageRepository.findByChannelId(channel.getId());
-          LocalDateTime lastMessageTime = messages.stream()
-              .map(Message::getCreatedAt)
-              .map(i -> LocalDateTime.ofInstant(i, ZoneId.systemDefault()))
-              .max(LocalDateTime::compareTo)
-              .orElse(null);
-
-          List<UUID> memberIds = null;
-          if (channel.getChannelType() == ChannelType.PRIVATE) {
-            memberIds = channel.getChannelMembers().stream()
-                .map(User::getId)
-                .collect(Collectors.toList());
-          }
-
-          return new ChannelDto(
-              channel.getId(),
-              channel.getChannelName(),
-              channel.getChannelOwner().getId(),
-              channel.getChannelType(),
-              memberIds,
-              lastMessageTime
-          );
-        })
-        .collect(Collectors.toList());
+    return channelRepository.findAll().stream()
+        .filter(channel ->
+            channel.getType().equals(ChannelType.PUBLIC)
+                || mySubscribedChannelIds.contains(channel.getId())
+        )
+        .map(this::toDto)
+        .toList();
   }
 
   @Override
@@ -177,20 +77,20 @@ public class BasicChannelService implements ChannelService {
     Channel channel = channelRepository.findById(channelId)
         .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 채널입니다."));
 
-    if (channel.getChannelType() == ChannelType.PRIVATE) {
+    if (channel.getType() == ChannelType.PRIVATE) {
       throw new IllegalArgumentException("PRIVATE 채널은 수정이 불가능합니다.");
     }
 
     String newChannelName = request.channelName();
 
-    if (channel.getChannelName().equals(newChannelName)) {
+    if (channel.getName().equals(newChannelName)) {
       throw new IllegalArgumentException("채널 이름이 기존과 동일합니다.");
     }
 
     UUID ownerId = channel.getChannelOwner().getId();
     boolean isDuplicate = channelRepository.findAll().stream()
         .anyMatch(c -> c.getChannelOwner().getId().equals(ownerId)
-            && c.getChannelName().equals(newChannelName));
+            && c.getName().equals(newChannelName));
 
     if (isDuplicate) {
       throw new IllegalArgumentException("이미 해당 채널명이 존재합니다.");
@@ -219,51 +119,30 @@ public class BasicChannelService implements ChannelService {
     channelRepository.delete(channelId);
   }
 
+  private ChannelDto toDto(Channel channel) {
+    Instant lastMessageAt = messageRepository.findByChannelId(channel.getId())
+        .stream()
+        .sorted(Comparator.comparing(Message::getCreatedAt).reversed())
+        .map(Message::getCreatedAt)
+        .limit(1)
+        .findFirst()
+        .orElse(Instant.MIN);
 
-  @Override
-  public void addMember(UUID channelId, UUID userId) {
-    Channel channel = channelRepository.findById(channelId)
-        .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 채널 ID입니다."));
-    User user = userRepository.findById(userId)
-        .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 유저 ID입니다."));
-
-    boolean alreadyMember = channel.getChannelMembers().stream()
-        .anyMatch(member -> member.getId().equals(userId));
-    if (alreadyMember) {
-      throw new IllegalArgumentException("이미 채널의 멤버입니다.");
+    List<UUID> participantIds = new ArrayList<>();
+    if (channel.getType().equals(ChannelType.PRIVATE)) {
+      readStatusRepository.findByChannelId(channel.getId())
+          .stream()
+          .map(ReadStatus::getUserId)
+          .forEach(participantIds::add);
     }
 
-    channel.addChannelUser(user);
-    channelRepository.update(channel);
-
-    if (channel.getChannelType() == ChannelType.PRIVATE) {
-      ReadStatus readStatus = new ReadStatus(userId, channelId, Instant.MIN);
-      readStatusRepository.save(readStatus);
-    }
-  }
-
-  @Override
-  public void removeMember(UUID channelId, UUID userId) {
-    Channel channel = channelRepository.findById(channelId)
-        .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 채널 ID입니다."));
-    User user = userRepository.findById(userId)
-        .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 유저 ID입니다."));
-
-    if (channel.getChannelMembers().stream().noneMatch(u -> u.getId().equals(userId))) {
-      throw new IllegalArgumentException("채널에 존재하지 않는 사용자입니다.");
-    }
-    channel.removeChannelUser(user);
-    channelRepository.update(channel);
-
-    if (channel.getChannelType() == ChannelType.PRIVATE) {
-      readStatusRepository.deleteByUserIdAndChannelId(userId, channelId);
-    }
-  }
-
-  @Override
-  public List<User> getChannelMembers(UUID channelId) {
-    Channel channel = channelRepository.findById(channelId)
-        .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 채널 ID입니다."));
-    return new ArrayList<>(channel.getChannelMembers());
+    return new ChannelDto(
+        channel.getId(),
+        channel.getType(),
+        channel.getName(),
+        channel.getDescription(),
+        participantIds,
+        lastMessageAt
+    );
   }
 }
